@@ -281,7 +281,8 @@ struct ipmiconsole_ctx_config {
 struct ipmiconsole_ctx_connection {
 
   /* File Descriptor User Interface */
-  int user_fd;                  /* never touched by this library */
+  int user_fd;                  /* never touched internally by the library, except ... */
+  int user_fd_retrieved;        /* if user never grabbed it */
   int ipmiconsole_fd;
   scbuf_t console_remote_console_to_bmc;
   scbuf_t console_bmc_to_remote_console;
